--- a/wzkris-auth/wzkris-auth-biz/src/main/resources/templates/login.html
+++ b/wzkris-auth/wzkris-auth-biz/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Spring Authorization Server sample</title>
+    <title>Login page</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" rel="stylesheet">
     <link href="/assets/css/signin.css" rel="stylesheet" th:href="@{/assets/css/signin.css}"/>
